refactor: sources refactor (#29)
* refactor(jobs): move sources as the main thing

* better ui

* chore: sources better handlers

* ui clean up

* fmt
